Fixed a localization resource issue and update dependencies
Fixed a localization resource issue for the Harden System Security app and also updated the MSAL library versions for Harden System Security and AppControl Manager.

--- a/Harden System Security/Strings/pl-PL/Resources.resw
+++ b/Harden System Security/Strings/pl-PL/Resources.resw
@@ -2246,7 +2246,7 @@
   <data name="INFToJSONConversionSectionSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>Wybierz jeden lub więcej plików INF bezpieczeństwa do konwersji na format JSON</value>
   </data>
-    <data name="SelectedText.Text" xml:space="preserve">
+    <data name="SelectedItemText.Text" xml:space="preserve">
     <value>Wybrane: </value>
   </data>
   <data name="StatusAppliedText" xml:space="preserve">
