--- a/Harden System Security/Strings/AR/Resources.resw
+++ b/Harden System Security/Strings/AR/Resources.resw
@@ -2246,7 +2246,7 @@
   <data name="INFToJSONConversionSectionSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>اختر ملف INF أمان واحد أو أكثر للتحويل إلى تنسيق JSON</value>
   </data>
-    <data name="SelectedText.Text" xml:space="preserve">
+    <data name="SelectedItemText.Text" xml:space="preserve">
     <value>محدد: </value>
   </data>
   <data name="StatusAppliedText" xml:space="preserve">
