--- a/Harden System Security/Strings/ES/Resources.resw
+++ b/Harden System Security/Strings/ES/Resources.resw
@@ -2246,7 +2246,7 @@
   <data name="INFToJSONConversionSectionSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>Elegir uno o más archivos INF de seguridad para convertir a formato JSON</value>
   </data>
-    <data name="SelectedText.Text" xml:space="preserve">
+    <data name="SelectedItemText.Text" xml:space="preserve">
     <value>Seleccionado: </value>
   </data>
   <data name="StatusAppliedText" xml:space="preserve">
