--- a/Harden System Security/Strings/el-GR/Resources.resw
+++ b/Harden System Security/Strings/el-GR/Resources.resw
@@ -2246,7 +2246,7 @@
   <data name="INFToJSONConversionSectionSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>Επιλέξτε ένα ή περισσότερα αρχεία INF ασφαλείας για μετατροπή σε μορφή JSON</value>
   </data>
-    <data name="SelectedText.Text" xml:space="preserve">
+    <data name="SelectedItemText.Text" xml:space="preserve">
     <value>Επιλεγμένα: </value>
   </data>
   <data name="StatusAppliedText" xml:space="preserve">
