--- a/Harden System Security/Strings/hi-IN/Resources.resw
+++ b/Harden System Security/Strings/hi-IN/Resources.resw
@@ -2246,7 +2246,7 @@
   <data name="INFToJSONConversionSectionSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>JSON फॉर्मेट में कन्वर्ट करने के लिए एक या अधिक सुरक्षा INF फाइलें चुनें</value>
   </data>
-    <data name="SelectedText.Text" xml:space="preserve">
+    <data name="SelectedItemText.Text" xml:space="preserve">
     <value>चयनित: </value>
   </data>
   <data name="StatusAppliedText" xml:space="preserve">
