--- a/Harden System Security/Strings/ml-IN/Resources.resw
+++ b/Harden System Security/Strings/ml-IN/Resources.resw
@@ -2246,7 +2246,7 @@
   <data name="INFToJSONConversionSectionSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>JSON ഫോർമാറ്റിലേക്ക് മാറ്റുന്നതിന് ഒന്നോ അതിലധികമോ സുരക്ഷാ INF ഫയലുകൾ തിരഞ്ഞെടുക്കുക</value>
   </data>
-    <data name="SelectedText.Text" xml:space="preserve">
+    <data name="SelectedItemText.Text" xml:space="preserve">
     <value>തിരഞ്ഞെടുത്തത്: </value>
   </data>
   <data name="StatusAppliedText" xml:space="preserve">
